--- a/d/dz/dzzz/index.html
+++ b/d/dz/dzzz/index.html
@@ -10,7 +10,7 @@
 <ul>
  <li> <a href="http://kubsu.ru/">1 - Kubsu </a> </li>
  <li> <a href="https://kubsu.ru/">2 - Kubsu </a> </li>
- <li> <a href="http://kubsu.ru/"> <img src="https://www.meme-arsenal.com/memes/52370162a0533efb673e45de074f720e.jpg"> </img> </a> </li>
+ <li> <a href="http://kubsu.ru/"> <img src="https://www.meme-arsenal.com/memes/52370162a0533efb673e45de074f720e.jpg"> </a> </li>
  <li> <a href="https://www.kubsu.ru/index.php">4 - Kubsu</a> </li>
  <li> <a href="index.html">5 - Главная</a> </li>
  <li> <a href="#formm">6 - Ссылка на форму</a> </li>
@@ -24,11 +24,11 @@
  <li> <a href="https://kubsau.ru/entrant/">14 -  Ссылка на фрагмент страницы стороннего сайта </a> </li>
 
 
- <li> <img src="https://vsegda-pomnim.com/uploads/posts/2023-03/1678997683_vsegda-pomnim-com-p-odin-kamen-foto-1.jpg" usemap="#image">
+ <li> <img src="https://vsegda-pomnim.com/uploads/posts/2023-03/1678997683_vsegda-pomnim-com-p-odin-kamen-foto-1.jpg" alt="image1" usemap="#image">
  <map name="image"> 
- 	<area shape="rect" coords="0, 600, 700, 0" href="https://vsegda-pomnim.com/uploads/posts/2023-03/1679024920_vsegda-pomnim-com-p-fotografiya-kamnya-13.jpg">
- 	<area shape="circle" coords="1600, 800, 700" href="https://vsegda-pomnim.com/uploads/posts/2023-03/1679025015_vsegda-pomnim-com-p-fotografiya-kamnya-14.jpg">
- </map> </img> </li>
+ 	<area shape="rect" coords="0,600,700,0" href="https://vsegda-pomnim.com/uploads/posts/2023-03/1679024920_vsegda-pomnim-com-p-fotografiya-kamnya-13.jpg" alt="image2">
+ 	<area shape="circle" coords="1600,800,700" href="https://vsegda-pomnim.com/uploads/posts/2023-03/1679025015_vsegda-pomnim-com-p-fotografiya-kamnya-14.jpg" alt="image3">
+ </map> </li>
 
 
  <li> <a href="">16 - Ссылка с пустым href </a> </li>
@@ -45,9 +45,6 @@
 </ul>
 
 
-
-
-<ul>
  <form id="formm">
  <li> <label for="name">ФИО</label> <input type="text" id="name" name="name"> </li>
  <br>
@@ -81,11 +78,10 @@
 
  <li> <label for="bio">Биография <br> </label> <textarea id="bio" name="bio" rows=4></textarea> </li>
  <br>
- <li> <label for="check" id="contract" name="contract">С контрактом ознакомлен</label> <input type="checkbox" id="contract" name="contract"> </li>
+ <li> <label for="check" id="contract">С контрактом ознакомлен</label> <input type="checkbox" id="check" name="cbox" value="check"> </li>
  <br>
  <li> <input type="submit" value="Сохранить"> </li>
  </form>
-</ul> 
 
 
 </body>
