--- a/d/dz/dzzz/index.html
+++ b/d/dz/dzzz/index.html
@@ -10,7 +10,7 @@
 <ul>
  <li> <a href="http://kubsu.ru/">1 - Kubsu </a> </li>
  <li> <a href="https://kubsu.ru/">2 - Kubsu </a> </li>
- <li> <a href="http://kubsu.ru/"> <img src="https://www.meme-arsenal.com/memes/52370162a0533efb673e45de074f720e.jpg"> </a> </li>
+ <li> <a href="http://kubsu.ru/"> <img src="https://www.meme-arsenal.com/memes/52370162a0533efb673e45de074f720e.jpg" alt="image7"> </a> </li>
  <li> <a href="https://www.kubsu.ru/index.php">4 - Kubsu</a> </li>
  <li> <a href="index.html">5 - Главная</a> </li>
  <li> <a href="#formm">6 - Ссылка на форму</a> </li>
@@ -26,7 +26,7 @@
 
  <li> <img src="https://vsegda-pomnim.com/uploads/posts/2023-03/1678997683_vsegda-pomnim-com-p-odin-kamen-foto-1.jpg" alt="image1" usemap="#image">
  <map name="image"> 
- 	<area shape="rect" coords="0,600,700,0" href="https://vsegda-pomnim.com/uploads/posts/2023-03/1679024920_vsegda-pomnim-com-p-fotografiya-kamnya-13.jpg" alt="image2">
+ 	<area shape="rect" coords="0,0,700,600" href="https://vsegda-pomnim.com/uploads/posts/2023-03/1679024920_vsegda-pomnim-com-p-fotografiya-kamnya-13.jpg" alt="image2">
  	<area shape="circle" coords="1600,800,700" href="https://vsegda-pomnim.com/uploads/posts/2023-03/1679025015_vsegda-pomnim-com-p-fotografiya-kamnya-14.jpg" alt="image3">
  </map> </li>
 
