--- a/d/dz/dzzz/index.html
+++ b/d/dz/dzzz/index.html
@@ -44,7 +44,7 @@
  <li> <a href="ftp://user:qwerty@example.ru/examples/text.txt">21 - FTP </a> </li>
 </ul>
 
-<ul>
+<p> Форма </p>
  <form id="formm">
  <li> <label for="name">ФИО</label> <input type="text" id="name" name="name"> </li>
  <br>
@@ -81,7 +81,7 @@
  <br>
  <li> <input type="submit" value="Сохранить"> </li>
  </form>
-</ul>
+
 
 
 </body>
