--- a/d/dz/dzzz/index.html
+++ b/d/dz/dzzz/index.html
@@ -46,21 +46,21 @@
 
 <p> Форма </p>
  <form id="formm">
- <li> <label for="name">ФИО</label> <input type="text" id="name" name="name"> </li>
+ <label for="name">ФИО</label> <input type="text" id="name" name="name">
  <br>
- <li> <label for="mobile">Телефон</label> <input type="tel" id="mobile" name="tele"> </li>
+ <label for="mobile">Телефон</label> <input type="tel" id="mobile" name="tele">
  <br>
- <li> <label for="mail">Почта</label> <input type="email" id="mail" name="mail"> </li>
+ <label for="mail">Почта</label> <input type="email" id="mail" name="mail">
  <br>
- <li> <label for="bdate">Дата рождения</label> <input type="date" id="bdate" name="bdate"> </li>
+ <label for="bdate">Дата рождения</label> <input type="date" id="bdate" name="bdate">
  <br>
- <li> Пол <br> <label for="ml">Мужчина</label> <input type="radio" id="ml" name="gender" value="ml"> <label for="fml">Женщина</label> <input type="radio" id="fml" name="gender" value="fml"> </li>
+ Пол <br> <label for="ml">Мужчина</label> <input type="radio" id="ml" name="gender" value="ml"> <label for="fml">Женщина</label> <input type="radio" id="fml" name="gender" value="fml">
  <br>
 
  
- <li> <label for="lang">Любимый язык прграммирования</label>
+ <label for="lang">Любимый язык прграммирования</label>
  <br>	
- <select id="lang" name="pr-ln" multiple>
+ <select id="lang" name="pr" multiple>
  <option value="pascal">Pascal</option>
  <option value="c">C</option>
  <option value="cpp">C++</option>
@@ -72,14 +72,14 @@
  <option value="clojure">Clojure</option>
  <option value="prolog">Prolog</option>
  <option value="scala">Scala</option>
- </select> </li>
+ </select>
  <br>
 
- <li> <label for="bio">Биография <br> </label> <textarea id="bio" name="bio" rows=4></textarea> </li>
+ <label for="bio">Биография <br> </label> <textarea id="bio" name="bio" rows=4></textarea>
  <br>
- <li> <label for="check" id="contract">С контрактом ознакомлен</label> <input type="checkbox" id="check" name="cbox" value="check"> </li>
+ <label for="check" id="contract">С контрактом ознакомлен</label> <input type="checkbox" id="check" name="cbox" value="check">
  <br>
- <li> <input type="submit" value="Сохранить"> </li>
+ <input type="submit" value="Сохранить">
  </form>
 
 
